# Enemy-Territory

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRDPARTY.md
cmake/: Client.cmake  ClientModules.cmake  CompilerWarnings.cmake  Dedicated.cmake  EngineCore.cmake  FeelHarness.cmake  GameModule.cmake  ModulePak.cmake  Renderer2.cmake  RmAssets.cmake  ShowcaseMap.cmake
docs/: BUILD.md  HOSTING.md  INSTALLER.md  MAPPER-HOOKS.md  MODERN-EFFECTS.md  MODERNIZATION.md  OASIS-CONVERSION.md  THIRDPARTY.md
docs/superpowers/evidence-scripts/: make_camera_textures.py  make_test_material.py  mock_master.py  tga_diff.py  tga_to_png.py
docs/superpowers/plans/: 2026-06-01-modern-display-input.md  2026-06-01-sdl2-audio-cleanup.md  2026-06-03-r2-port.md  2026-06-03-r2-scaffold.md  2026-06-03-r2-world.md  2026-06-03-settings-ux.md  2026-06-11-r2-parity.md  2026-06-12-r2-modern.md  2026-06-13-net2-dos-hardening.md  2026-06-13-net3-server-browser.md
docs/superpowers/specs/: 2026-06-01-modern-display-input-design.md  2026-06-01-sdl2-audio-cleanup-design.md
etmain/ui/: menudef.h
installer/: etrm.iss
rm/ui/: options_customise_game.menu  options_system.menu  profile_create.menu  profile_create_initial.menu
rm_showcase/maps/: rm_showcase.bsp  rm_showcase.map
rm_showcase/scripts/: rm_showcase.shader
rm_showcase/textures/rm_showcase/: block_d.tga  block_n.tga  block_s.tga  rivet_d.tga  rivet_n.tga  rivet_s.tga  stud_d.tga  stud_n.tga  stud_s.tga
rm_showcase/tools/: make_showcase_map.py  make_showcase_textures.py
scripts/: pack_rm_assets.ps1  play.bat  server.bat
src/botlib/: CMakeLists.txt
src/cgame/: cg_draw.c  cg_drawtools.c  cg_local.h  cg_main.c  cg_view.c
src/client/: CMakeLists.txt  cl_cgame.c  cl_cin.c  cl_main.c  cl_scrn.c  cl_ui.c  client.h
src/game/: bg_fov.c  bg_public.h  g_main.c  q_shared.h
src/jpeg-6/: CMakeLists.txt  jerror.c  jerror.h  jmemnobs.c
src/qcommon/: common.c  files.c  qcommon.h  vm.c  vm_local.h
src/renderer/: CMakeLists.txt  tr_backend.c  tr_init.c  tr_local.h  tr_main.c  tr_public.h  tr_scene.c
src/renderer2/: tr2_stub.c
src/renderer2/bridge/: tr2_bind_harness.c  tr2_bridge.h  tr2_bridge_ours.c  tr2_bridge_theirs.c  tr2_engine_stubs.c  tr2_jpeg_compat.c  tr2_jpeg_compat.h  tr2_jpg_stub.c  tr2_layout_check.c  tr2_layout_ours.c  tr2_layout_theirs.c  tr2_png_stub.c
src/renderer2/etl/: tr_bsp.c  tr_glsl.c  tr_glsldef.h  tr_image.c  tr_init.c  tr_local.h  tr_shade.c
src/renderer2/etl/common/: tr_image_jpg.c
src/renderer2/gldef/: default.gldef
src/renderer2/glsl/: lightMapping_fp.glsl  lightMapping_vp.glsl
src/server/: server.h  sv_client.c  sv_game.c  sv_init.c  sv_main.c
src/splines/: CMakeLists.txt
src/sys/: sdl_glimp.c  sdl_input.c  sdl_local.h  sdl_qgl.c  sdl_snd.c
src/ui/: ui_local.h  ui_main.c
src/win32/: win_glimp.c  win_local.h  win_main.c  win_shared.c  win_snd.c  win_syscon.c
tests/: feel_pmove.c  feel_stubs.c  fov_test.c
tools/oasis_rm/: make_hd_materials.py  make_terrain_alphamap.py
